<resources>
    <string name="app_name">UD5_PMDM_SERGIO_ALVAREZ_VILLAVERDE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_user_email">Inserte su email</string>
    <string name="hint_user_password">Inserte su contraseña</string>
    <string name="text_access_btn">Acceder</string>
    <string name="text_register_btn" >Registrarse</string>
    <string name="deal_title">Título del videojuego</string>
    <string name="original_price">20,30$</string>
    <string name="deal_price">15,75$</string>
    <string name="welcome_text">Bienvenido</string>
</resources>