<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_signup_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.initial.signup.SignUpFragment" >

    <EditText
        android:id="@+id/et_user_email_signup"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:hint="@string/hint_user_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <EditText
        android:id="@+id/et_user_password_signup"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/hint_user_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_user_email_signup"
        app:layout_constraintStart_toStartOf="@+id/et_user_email_signup"
        app:layout_constraintTop_toBottomOf="@+id/et_user_email_signup"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_signup_signup"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/text_register_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_user_password_signup"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>